# Cryptography-Homework-Comp

./: CMakeLists.txt
ECDH/: CertificateAuthorithy  KeyGen.c  PK.txt  SK.txt  alice.c
GCD/: RequiredFunctionsHW2.c  gcd  gcd.c
Pollard Rho/EEA_GMP/: eea_gmp.c
Pollard Rho/SNM_GMP/: snm_gmp  snm_gmp.c
Shamir Secret Sharing/ChainCrypt/: alice  alice.c  bob  bob.c
Shamir Secret Sharing/Davies-Meyer/: RequiredFunctionsHW3.c  dm  dm.c
Shamir Secret Sharing/ShamirSecretSharing/: Share1.txt  Share2.txt  Share3.txt  Share4.txt  Share5.txt  gen  recon  shamir_helper.c  shamirgen.c  shamirrecon.c
